lots of small improvements based on automated code inspections and such